--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -64,7 +64,7 @@
 						</li>
 					<% elsif not current_user.uid and current_user.student_id %>
 						<li>
-							<%= link_to  "綁定FaceBook帳號", '/auth/facebook', :confirm=>'注意! 綁定後無法反悔'%>
+							<%= link_to  "綁定FaceBook帳號", '/auth/facebook', :confirm=>'注意! 綁定後無法反悔', :onclick=>"disale_submit()"%>
 						</li>
 					<% end %>	
 						<li>
@@ -101,79 +101,9 @@
 </div>
 
 <% if not current_user %>
-
-<div class="modal fade btn-lg" id="login_modal" tabindex="-1" role="dialog" aria-hidden="true" >
-	<div class="modal-dialog" >
-		<div class="modal-content" >	
-			<div class="modal-header text-center">Login</div>	
-			<div class="modal-body row" >
-					<%=form_tag "/main/E3Login_Check", :class=>'col-md-8 e3-login', :remote=>true do%>
-					<div class="form-group">
-						<label class="control-label">e3帳號登入<span class='text-color-red login-alert'></span></label>
-					</div>
-					<div class="form-group">
-    					<label for="id" class="col-md-3 control-label">學號</label>
-   						 <div class="col-md-9">
-      						<%=text_field_tag :id, '', :class=>"form-control"%>
-    					</div>
-  					</div>
-  					<div class="form-group">
-    					<label for="pwd" class="col-md-3 control-label">密碼</label>
-   						 <div class="col-md-9">
-      						<%=password_field_tag :pwd, '', :class=>"form-control"%>
-    					</div>
-  					</div>
-					<div class="form-group">
-   						<div class="col-sm-offset-4 col-sm-8">
-      						</br><button type="submit" class="btn btn-info submit-but">送出</button>
-    					</div>
- 					</div>
-					<% end %>
-					<div class="col-md-1"></div>
-					<div class="col-md-4" class='modal-fb-link'>
-						<label>FB登入</label></br></br>
-						<%= link_to  "/auth/facebook", id: "sign_in" do %>
-							<%=fa_icon "facebook-square 3x" %>
-						<% end %>
-					</div>
-			</div>
-		</div>
-	</div>
-</div>
-
+	<%=render '/layouts/login', :ltype=>"login"%>
 <% elsif not current_user.student_id%>
-<div class="modal fade btn-lg" id="login_modal" tabindex="-1" role="dialog" aria-hidden="true" >
-	<div class="modal-dialog" >
-		<div class="modal-content" >	
-			<div class="modal-header text-center">綁定e3帳號</div>	
-			<div class="modal-body row" >
-					<%=form_tag "/main/E3Login_Check", :class=>'col-md-8 e3-login', :remote=>true do%>
-					<div class="form-group">
-						<label class="control-label">e3帳號登入<span class='text-color-red login-alert'></span></label>
-					</div>
-					<div class="form-group">
-    					<label for="id" class="col-md-3 control-label">學號</label>
-   						 <div class="col-md-9">
-      						<%=text_field_tag :id, '', :class=>"form-control"%>
-    					</div>
-  					</div>
-  					<div class="form-group">
-    					<label for="pwd" class="col-md-3 control-label">密碼</label>
-   						 <div class="col-md-9">
-      						<%=password_field_tag :pwd, '', :class=>"form-control"%>
-    					</div>
-  					</div>
-					<div class="form-group">
-   						<div class="col-sm-offset-4 col-sm-8">
-      						</br><button type="submit" class="btn btn-info submit-but" confirm="注意! 綁定後無法反悔">送出</button>
-    					</div>
- 					</div>
-					<% end %>
-			</div>
-		</div>
-	</div>
-</div>
-
+	<%=render '/layouts/login', :ltype=>"bind"%>
 <% end %>
 
 
@@ -192,12 +122,12 @@
 				$("#user_modal .modal-body").load("/courses/show_cart?table_type=sidebar");
 			}
 		);
-		
-		$('.sign_in').click(function(){
-			$("#login_modal").modal('show');	
-			$('.modal-fb-link').show();
+	<% if current_user and current_user.uid and not current_user.student_id%>	
+		$('.fb-bind-e3').click(function(){
+			$("#login_modal").modal('show');			
+			return false;
 		});
-
+	<% end %>
 	});
 	function add_to_cart(id,type){
 		$.ajax({
@@ -217,32 +147,5 @@
 		
 		});
 	}
-	$('.e3-login').submit(function(){		
-		$('.submit-but').html('<%=j fa_icon "spinner spin"%>');
-		$('.submit-but').attr("disabled", true);
-		$.ajax({
-			type: "POST",
-  			url: "/main/E3Login_Check" ,
-  			data: $(this).serialize(),
-  			success: function(data){
-  				console.log('login result : '+data);
-				if(data=='success'){
-					location.reload();
-				}else{
-					$('.login-alert').html('帳號或密碼錯誤').show().fadeOut(3500);
-				}
-  			},error: function(){
-  				$('.submit-but').html('送出');
-  				$('.submit-but').attr("disabled", false);
-  				alert('Cannot connect to E3 login service..');
-  			}
-		});
-		return false ;
-	});
-	
-	$('.fb-bind-e3').click(function(){
-		$("#login_modal").modal('show');			
-		return false;
-	});
 
 </script>
