--- a/app/views/user/import_course_2.html.erb
+++ b/app/views/user/import_course_2.html.erb
@@ -19,7 +19,9 @@ $(document).ready(function(){
 		<% if current_user.is_undergrad %>
 		$("#common_check_div").html(tmpl("common_check",data));
 		<% end %>
-		$("#cosmap_check_div").html(tmpl("cosmap_check",data));
+		if(data["course_map"]){
+			$("#cosmap_check_div").html(tmpl("cosmap_check",data));
+		}
 		$("#course_list").html(tmpl("select_cf",data));
 		console.log(data);
 	});
