--- a/app/views/user/_xtmpl_cm_check.html.erb
+++ b/app/views/user/_xtmpl_cm_check.html.erb
@@ -4,9 +4,14 @@
 	<tr class="row" >
 		<td class="col-md-12" colspan="{%=cm.max_colspan+1%}">
 			<h4 class="text-center">
-				{%=cm.name %}
+				{%=cm.name %} 
 				<% if @show_report %>
-				<a href="/user/statistics_table" class="btn btn-info pull-right" target="blank">產生報表</a>
+				<% if params[:uid].presence %>
+					<a href="/user/statistics_table?user_id=<%=j params[:uid]%>" class="btn btn-info pull-right" target="blank">產生報表</a>
+				<% else %>
+					<a href="/user/statistics_table" class="btn btn-info pull-right" target="blank">產生報表</a>
+				<% end %>
+				
 				<% end %>
 			</h4>
 		</td>
