--- a/app/views/course_details/_results.html.erb
+++ b/app/views/course_details/_results.html.erb
@@ -3,44 +3,63 @@ $(document).ready(function(){
 	change_degree($("#degree"));
 	$("#q_course_department_id_eq").val('<%=@q.course_department_id_eq%>');
 });
+function search_by_text(){
+	clean_input($("#dept_div"));
+	clean_input($("#sem_div"));
+	$('#course_detail_search').submit();
+}
+function search_by_select(){
+	clean_input($("#text_div"));
+	$('#course_detail_search').submit();
+}
 </script>
+
 <%= search_form_for @q, class:"form-inline" do |f| %>
 
 <div class="row">
 	
-	<div class="col-sm-1 col-md-offset-1 no-padding-left">
-		<div class="cleaninput" onclick='clean_input($(this))'><%=fa_icon "times"%></div>
-		<%= f.select :semester_id_eq, options_from_collection_for_select(Semester.all.reverse, "id", "name", @q.semester_id_eq),{:prompt=> "學期"},{ :class=> "form-control",:onchange=>"$('#search').click();"} %>
+	<div class="col-sm-1 col-md-offset-3 no-padding-left">
+		<div id="sem_div" class="cleaninput" onclick='clean_input($(this))'><%=fa_icon "times"%></div>
+		<%= f.select :semester_id_eq, options_from_collection_for_select(Semester.all.reverse, "id", "name", @q.semester_id_eq),{:prompt=> "學期"},{ :class=> "form-control",:onchange=>"search_by_select();"} %>
 	</div>
 	<div class="col-sm-1 no-padding-left">
 		<%= select_tag "degree" ,options_for_select([['大學部','3'],['研究所','2'],['大學部共同','0']],params[:degree]), prompt: "分類", class: "form-control",:onchange=>"change_degree($(this))" %>
 	</div>	
 	<div class="col-sm-2 no-padding-left ">
-		<div class="cleaninput" onclick='clean_input($(this))'><%=fa_icon "times"%></div>
-		<%= f.select :course_department_id_eq, options_from_collection_for_select(Department.where.not(:dept_type=>['no_courses','for_user']), "id", "ch_name", @q.course_department_id_eq),{:prompt=> "系所"},{ :class=> "form-control",:onchange=>"$('#search').click();"} %>
+		<div id="dept_div" class="cleaninput" onclick='clean_input($(this))'><%=fa_icon "times"%></div>
+		<%= f.select :course_department_id_eq, options_from_collection_for_select(Department.where(:use_type=>['dept','common']), "id", "ch_name", @q.course_department_id_eq),{:prompt=> "系所"},{ :class=> "form-control",:onchange=>"search_by_select();"} %>
 	</div>
-	<div class="col-sm-6 row">
+	
+	<div class="col-sm-2">
+		<div id="text_div" class="cleaninput" onclick='clean_input($(this))'><%=fa_icon "times"%></div>
+		<%=text_field_tag :custom_search,params[:custom_search], class: "form-control",placeholder:"課名/老師" %>
+		<!--<%= f.search_field :course_ch_name_cont, class: "form-control",placeholder:"課名" %>-->
+		
+	</div>
+	<button class="btn btn-success" id="search" onclick="search_by_text();">
+		<%= fa_icon "search" %>
+	</button>
+	
+	<!--<div class="col-sm-6 row">
+	
 	<div class="col-sm-2 no-padding-left no-padding-right">
 		<div class="cleaninput" onclick='clean_input($(this))'><%=fa_icon "times"%></div>
 		<%= f.search_field :brief_cont, class: "form-control",placeholder:"摘要(向度)" %>
 	</div>
-	<div class="col-sm-3">
-		<div class="cleaninput" onclick='clean_input($(this))'><%=fa_icon "times"%></div>
-		<%= f.search_field :course_ch_name_cont, class: "form-control",placeholder:"課名" %>
-	</div>
+	-->
+	
+	
+	<!--
 	<div class="col-sm-2">
 		<div class="cleaninput" onclick='clean_input($(this))'><%=fa_icon "times"%></div>
 		<%= f.search_field :time_cont, class: "form-control",placeholder:"時間" %>
 	</div>
-	<div class="col-sm-3">
-		<div class="cleaninput" onclick='clean_input($(this))'><%=fa_icon "times"%></div>
-		
+	
+	
+	
+	
 	</div>
-	<button class="btn btn-success" id="search" onclick="$('#course_detail_search').submit()">
-	<%= fa_icon "search" %>
-	</button>
-	</div>
-  
+  -->
 
 <% end %>
 </div>
@@ -49,16 +68,6 @@ $(document).ready(function(){
 
 <table class="table table-hover table-bordered bg-white-transparent" id="course_table" >
 
-
-<div class="row hidden " id="search_tips">
-	<div id="" class="col-md-10 col-md-offset-1">
-		<div class="bs-callout bs-callout-info ">
-			<!--<h4></h4>-->
-			<p>快速鍵: 選擇類別-[U]ndergraduate:大學部 [G]raduate:研究所 [C]ommon:通識 [D]epartment:系所 [/]:關鍵字</p>
-			<p>搜尋規則: 1CD 5G=>找含有1CD與5G時段的課程(OR) 1CD5G=>找1CD5G的課程(AND) </p>
-		</div>
-	</div>
-</div>
 
 
 
@@ -90,7 +99,7 @@ $(document).ready(function(){
 					</td>
 					<td>
 						<%=cd.department ? cd.department.ch_name : "N/A"%>
-						<% if cd.brief&&cd.brief!=" " %>
+						<% if cd.brief&&cd.brief!="" %>
 						/<%= cd.brief %>
 						<% end %>
 					</td>
