--- a/app/views/course_maps/show.html.erb
+++ b/app/views/course_maps/show.html.erb
@@ -10,8 +10,8 @@
 		<td><%=(@course_map.semester_id==0)? "不指定" : @course_map.semester.year%></td>
 	<tr>
 	<tr>
-		<td colspan="4">說明：
-			testaa
+		<td colspan="4"><p>說明：</p>
+			<p><%=@course_map.desc%></p>
 		</td>
 	</tr>	
 </table>
