--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,11 +15,13 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-">
       <ul class="nav navbar-nav">
-				<% if current_user && current_user.role==0 %>
+				<% if current_user && current_user.role!=1 %>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">管理<b class="caret"></b></a>
 						<ul class="dropdown-menu">
+						<% if current_user.role==0 %>
 							<li><a href="/user/manage" rel="nofollow">使用者<span class="badge pull-right"><%=User.all.count%></span></a></li>
+						<% end %>
 							<li><a href="/departments" rel="nofollow">系<span class="badge pull-right"><%=Department.all.count%></span></a></li>
 							<li><a href="/course_maps/" rel="nofollow">課程地圖</a></li>
 							<li><a href="/main/student_import" rel="nofollow">手動匯入</a></li>
