add flag to score

--- a/app/views/user/_xtmpl_list_by_cosmap.html.erb
+++ b/app/views/user/_xtmpl_list_by_cosmap.html.erb
@@ -31,8 +31,8 @@
 						<h4 class="text-left">
 						{%=course.sem_id==0 ? "抵免" :get_sem_name(course.sem_id) %} | 
 						{%=course.name%} | 
-						<%= fa_icon "graduation-cap", class:"credit-count" %> <strong>{%=course.credit%}</strong> | 
-						{%=course.score %}
+						<%= fa_icon "graduation-cap", class:"credit-count" %> <strong>{%=course.credit==0 ? "0" : course.credit%}</strong> | 
+						<%= fa_icon "flag-checkered"%> <strong>{%=course.score %}</strong>
 						</h4>
 					</td>
 			</tr>
@@ -52,8 +52,8 @@
 					<h4 class="text-left">
 						{%=course.sem_id==0 ? "抵免" : get_sem_name(course.sem_id) %} | 
 						{%=course.name%} | 
-						<%= fa_icon "graduation-cap", class:"credit-count" %> <strong>{%=course.credit%}</strong> | 
-						{%=course.score %}
+						<%= fa_icon "graduation-cap", class:"credit-count" %> <strong>{%=course.credit==0 ? "0" : course.credit %}</strong> | 
+						<%= fa_icon "flag-checkered"%> <strong>{%=course.score %}</strong>
 						{% if(cfs.length>1){ %} 
 						<button class="btn btn-sm btn-default" onclick="$(this).next().toggleClass('hidden');">選擇學程</button>
 						<div class="hidden" style="width:250px;display:inline-block;">
